--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/feed
 spring.datasource.username=root
-spring.datasource.password=Tech@123
+spring.datasource.password=root
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
 # Web
