--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		<dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.28</version>
+        <scope>provided</scope>
+    	</dependency>
 	
 		<dependency>
 			<groupId>com.mysql</groupId>
