added post http in js file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 spring.sql.init.mode=always
 # Web
 spring.thymeleaf.mode=HTML
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
