--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/feed
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Tech@123
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
 # Web
@@ -19,4 +19,4 @@ spring.messages.basename=messages/messages
 logging.level.org.springframework=INFO
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
-server.port = 7020
+server.port = 8080
