--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.sql.init.mode=always
 # Web
 spring.thymeleaf.mode=HTML
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# JPA
+# JPA properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=true
 
 # Internationalization
 spring.messages.basename=messages/messages
