fix: likeCount duplicates and responsive layout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.messages.basename=messages/messages
 logging.level.org.springframework=INFO
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
+# spring.main.web-application-type=none
 server.port = 8080
