--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>20</java.version>
+		<spring-boot.version>2.5.2</spring-boot.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,8 +50,8 @@
         <version>1.18.28</version>
         <scope>provided</scope>
     	</dependency>
-<!-- 	
-		<dependency>
+	
+		<!-- <dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
@@ -61,28 +62,28 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
     <groupId>jakarta.persistence</groupId>
     <artifactId>jakarta.persistence-api</artifactId>
     <version>3.0.0</version>
 </dependency>
-<!-- Hibernate Core -->
+Hibernate Core 
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-core</artifactId>
     <version>5.6.0.Final</version>
 </dependency>
-<!-- Hibernate Entity Manager -->
+Hibernate Entity Manager 
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-entitymanager</artifactId>
     <version>5.6.0.Final</version>
-</dependency>
+</dependency> -->
 <!-- Database Driver (Example: MySQL Connector/J) -->
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.27</version>
+    <version>8.0.30</version>
 </dependency>
 	</dependencies>
 
