--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/feed
 spring.datasource.username=root
-spring.datasource.password=Tech@123
+spring.datasource.password=root
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
 # Web
+
+
 spring.thymeleaf.mode=HTML
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # JPA properties
