--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/feed
+spring.datasource.url=jdbc:mysql://localhost:3306/feeds
 spring.datasource.username=root
 spring.datasource.password=Tech@123
 # SQL is written to be idempotent so this is safe
