--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/feeds
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Tech@123
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
 # Web
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # JPA properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Internationalization
 spring.messages.basename=messages/messages
